--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body, html {height: 100%}
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top" style="text-align: center !important;">COMING SOON</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center">Bound Fragile, a bondage-focused artistic project</p>
+    <p class="w3-large w3-center">Bound Fragile, a portfolio of artistic bondage</p>
   </div>
 </div>
 
